--- a/Areas/admin/Views/products/Create.cshtml
+++ b/Areas/admin/Views/products/Create.cshtml
@@ -26,71 +26,77 @@
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.id_category, "id_category", htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.id_category, "id_category", htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.DropDownList("id_category", null, htmlAttributes: new { @class = "form-control" })
                                             @Html.ValidationMessageFor(model => model.id_category, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.id_brand, "id_brand", htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.id_brand, "id_brand", htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.DropDownList("id_brand", null, htmlAttributes: new { @class = "form-control" })
                                             @Html.ValidationMessageFor(model => model.id_brand, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.name_product, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.name_product, htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.EditorFor(model => model.name_product, new { htmlAttributes = new { @class = "form-control" } })
                                             @Html.ValidationMessageFor(model => model.name_product, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
                                             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.descibe, htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.TextAreaFor(model => model.descibe, new { htmlAttributes = new { @class = "form-control" } })
+                                            <script>
+                                                CKEDITOR.replace("describle")
+                                            </script>
                                             @Html.ValidationMessageFor(model => model.descibe, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        <div class="col-md-12">
                                             @Html.TextBoxFor(model => model.images, null, new { type = "file", @class = "form-control" })
                                             @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
+                                        @Html.LabelFor(model => model.images_size, htmlAttributes: new { @class = "control-label col-md-3" })
+                                        <div class="col-md-12">
                                             @Html.TextBoxFor(model => model.images_size, null, new { type = "file", @class = "form-control" })
                                             @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <div class="col-md-offset-2 col-md-10">
+                                        <div class="col-md-offset-2 col-md-12">
                                             <input type="submit" value="Create" class="btn btn-default" />
+
+                                        </div>
+                                        <div class="col-md-offset-2 col-md-12">
                                             <input type="reset" value="Create Again" class="btn btn-danger" />
                                         </div>
                                     </div>
                                 </div>
                             }
 
-                            <div>
+                            <div class="col-md-offset-2 col-md-12">
                                 @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-success" })
                             </div>
                         </div>
@@ -100,3 +106,6 @@
         </div>
     </div>
 </section>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
