--- a/Areas/admin/Views/products/Details.cshtml
+++ b/Areas/admin/Views/products/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@model do_an_web.Models.product
-
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -41,7 +40,7 @@
                                     </dt>
 
                                     <dd>
-                                        @Html.Raw(Model.descibe)
+                                        @Html.DisplayFor(model => model.descibe);
                                     </dd>
 
                                     <dt>
