--- a/Views/Users/DangNhap.cshtml
+++ b/Views/Users/DangNhap.cshtml
@@ -5,37 +5,41 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 style="text-align: center">ĐĂNG NHẬP</h2>
-<br />
-<div class="row">
-    <div class="offset-md-1 col-md-10">
-        <h2 style="color: red;">@ViewBag.ThongBao</h2>
-        @using (Html.BeginForm("DangNhap", "Users"))
-        {
-            @Html.ValidationSummary(true)
-            <div class="form-group">
-                <label for="dangnhap">Tên đăng nhập:</label>
-                @Html.TextBox("name_customer", null, new
-                {
-                    @class = "form-control",
-                    @id = "dangnhap",
-                    required = "required"
-                })
+<section class="vh-100 bg-image"
+         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+                            <h2 style="text-align: center">ĐĂNG NHẬP</h2>
+                            <br />
+                            <div class="row">
+                                <div class="offset-md-1 col-md-10">
+                                    <h2 style="color: red;">@ViewBag.ThongBao</h2>
+                                    @using (Html.BeginForm("DangNhap", "Users"))
+                                    {
+                                        @Html.ValidationSummary(true)
+                                        <div class="form-group">
+                                            <label for="dangnhap">Tên đăng nhập:</label>
+                                            @Html.TextBoxFor(c => c.name_customer, " ", new{ @class = "form-control", @id = "dangnhap", required = "required"})
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="password">Mật khẩu:</label>
+                                            @Html.PasswordFor(c => c.password_customer, new{ @class = "form-control", @id = "password", required = "required"})
+                                        </div>
+                                        <button type="submit" class="btn btn-success">ĐĂNG NHẬP</button>
+                                        <button type="submit" class="btn btn-danger">
+                                            <a href="@Url.Action("Register","Users")" style="text-decoration:none; color:white;">ĐĂNG KÝ</a>
+                                        </button>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Mật khẩu:</label>
-                @Html.Password("password_customer", null, new
-                {
-                    @class = "form-control",
-                    @id = "password",
-                    required = "required"
-                })
-            </div>
-            <button type="submit" class="btn btn-success">ĐĂNG NHẬP</button>
-            <button type="submit" class="btn btn-danger">
-                <a href="@Url.Action("Register","Users")" style="text-decoration:none; color:white;">ĐĂNG KÝ</a>
-            </button>
-        }
+        </div>
     </div>
-</div>
-
+</section>
